objects/Bulletin_Templates__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <defaultValue>&quot;PIB&quot;</defaultValue>
        <description>Stores type of job ex:
Product Information Bulletin : PIB
Service Bulletin: Service Bulletin</description>
        <inlineHelpText>Stores type of job ex:
Product Information Bulletin : PIB
Service Bulletin: Service Bulletin</inlineHelpText>
        <label>Notification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>